# libqaccessibilityclient

./: .arcconfig  .gitignore  .gitlab-ci.yml  .kde-ci.yml  AUTHORS  CMakeLists.txt  ChangeLog  LibKdeAccessibilityClient.cmake.in  LibKdeAccessibilityClientConfig.cmake.in  Mainpage.dox  Messages.sh  QAccessibilityClientConfig.cmake.in  QAccessibilityClientConfigVersion.cmake.in  README  README.md  metainfo.yaml
docs/: README  accessibility_kde_overview.svgz  doxygenconfig
examples/: CMakeLists.txt
examples/accessibleapps/: CMakeLists.txt  accessibleproperties.cpp  accessibleproperties.h  accessibletree.cpp  accessibletree.h  clientcachedialog.cpp  clientcachedialog.h  eventview.cpp  eventview.h  main.cpp  mainwindow.cpp  mainwindow.h  uiview.cpp  uiview.h
examples/dumper/: CMakeLists.txt  dumper.cpp  dumper.h  main.cpp
examples/runningapps/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: CMakeLists.txt  Mainpage.dox  QAccessibilityClientConfig.cmake.in  qaccessibilityclient-index.qdoc  qaccessibilityclient.qdoc  qaccessibilityclient.qdocconf
src/accessible/: accessibleobject.cpp  accessibleobject.h  accessibleobject_p.h  global.h  registry.cpp  registry.h  registry_p.h
src/atspi/: accessibleobject.cpp  accessibleobject.h  atspiaction.cpp  atspiaction.h  atspidbus.cpp  atspidbus.h  atspiwatcher.cpp  atspiwatcher.h  dbusconnection.cpp  dbusconnection.h  qt-atspi.cpp  qt-atspi.h
src/kdeaccessibilityclient/: accessibleobject.cpp  accessibleobject.h  accessibleobject_p.cpp  accessibleobject_p.h  cachestrategy_p.h  libkdeaccessibilityclient_export.h  registry.cpp  registry.h  registry_p.cpp  registry_p.h
src/qaccessibilityclient/: accessibleobject.cpp  accessibleobject.h  accessibleobject_p.cpp  accessibleobject_p.h  cachestrategy_p.h  qaccessibilityclient_export.h  registry.cpp  registry.h  registry_p.cpp  registry_p.h  registrycache.cpp  registrycache_p.h  roleobjects.cpp  roleobjects.h  roleobjects_p.cpp  roleobjects_p.h
tests/: CMakeLists.txt
tests/auto/: CMakeLists.txt  tst_accessibilityclient.cpp
tests/auto/simple/: simplewidgetapp.cpp
tests/manual/: CMakeLists.txt  accessibleproperties.cpp  accessibleproperties.h  accessibletree.cpp  accessibletree.h  clientcachedialog.cpp  clientcachedialog.h  eventview.cpp  eventview.h  eventview.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tests_auto_modeltest_modeltest.cpp  uiview.cpp  uiview.h
